Fixed home image on mobile

--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -37,6 +37,9 @@
     background-position: fixed;
     background-image: url('images/Jordan%20Holder%20Pool%20Render%205.jpg');
     background-image: linear-gradient(rgba($black, 0.01) 50%, rgba($black, 0.7) 100%), url('images/Jordan%20Holder%20Pool%20Render%205.jpg');
+    @include mobile {
+      background-attachment: scroll;
+    }
     .header {
       text-align: center;
       position: absolute;
